#4517 - Multi-value features are not included in BioC output
- Added support for loading and saving multi-value string features
- Added test